# ETL-Estrutura

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
data/output/: output.xlsx
docs/: api.md  index.md
docs/.github/workflows/: ci.yml
tests/: test_pipeline.py  test_requests.py
