[tool.poetry]
name = "estrutura-workshop"
version = "0.1.0"
description = "Meu projeto de ETL"
authors = ["Rafael Joia <rafael.joia@fgv.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
pytest = "^8.0.0"
pyarrow = "^15.0.0"
isort = "^5.13.2"
blue = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
